// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a clear option 1`] = `
<Frame
  clearOptionDisplay="- Select -"
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  value=""
  variant="default"
/>
`;

exports[`Select should render a combobox variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a combobox variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a default variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render a default variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render a disabled combobox variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a disabled default variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render a disabled multiple variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render a disabled search variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render a disabled tag variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a multiple variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render a multiple variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render a search variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render a search variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render a select with an optgroup and an option 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-3"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-label="Search"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="0"
>
  <div
    aria-disabled="false"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-3"
    >
      - Select -. List of 1 options. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a select with an optgroup and multiple options 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-4"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-label="Search"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="0"
>
  <div
    aria-disabled="false"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-4"
    >
      - Select -. List of 2 options. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a select with an option 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-1"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-label="Search"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="0"
>
  <div
    aria-disabled="false"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-1"
    >
      - Select -. List of 1 options. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a select with multiple options 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-2"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-label="Search"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  intl="[object Object]"
  role="application"
  tabindex="0"
>
  <div
    aria-disabled="false"
    aria-label="Search"
    class="display"
    role="textbox"
  >
    <span
      class="visually-hidden-component"
      hidden=""
      id="terra-select-screen-reader-description-2"
    >
      - Select -. List of 2 options. Use up and down arrow keys to navigate through options.
    </span>
    <div
      class="placeholder"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a tag variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a tag variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render an invalid combobox variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render an invalid default variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render an invalid multiple variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render an invalid search variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render an invalid tag variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;
